--- a/src/app.html
+++ b/src/app.html
@@ -1,8 +1,10 @@
 <template>
+    <require from="bootstrap/css/bootstrap.css"></require>
+
     <router-view class="${(reload != true ? 'blur' : '')}"></router-view>
 
     <!--  подгрузка  -->
-    <div class="reload ${(reload == true ? 'not-reload' : '')}">
+    <div class="row reload ${(reload == true ? 'not-reload' : '')}">
         <div class="loading">
             <img src="https://www.timewarnercable.com/content/dam/residential/images/checkout/global/spinner.gif" alt="" />
         </div>
