исправил баг с подгрузкой

--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
     <router-view class="${(reload != true ? 'blur' : '')}"></router-view>
 
     <!--  подгрузка  -->
-    <div class="row reload ${(reload == true ? 'not-reload' : '')}">
+    <div class="reload ${(reload == true ? 'not-reload' : '')}">
         <div class="loading">
             <img src="https://www.timewarnercable.com/content/dam/residential/images/checkout/global/spinner.gif" alt="" />
         </div>
